tek serviste ayağa kalkıyor

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,12 @@
 services:
   nginx:
-    build: nginx/
+    build: .
     container_name: nginx
     ports:
       - 8080:80
     networks:
       - ft_onion
-  
-  tor:
-    build: tor/
-    container_name: tor
-    networks:
-      - ft_onion
 
-
-    
 networks:
   ft_onion:
     driver: bridge
